--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-* {
-    margin: 0;
-    padding: 0;
-  }
 
-  .logo-item{
-    cursor: pointer;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-  .header-area {
-    display: flex;
-    padding: 20px;
-    /* width: 100%; */
-    background-color: rgb(255, 255, 255);
-    justify-content: space-between;
-    gap: 20px;
-    align-items: center;
+.logo-item {
+  cursor: pointer;
+}
+
+.header-area {
+  display: flex;
+  padding: 20px;
+  /* width: 100%; */
+  background-color: rgb(255, 255, 255);
+  justify-content: space-between;
+  gap: 20px;
+  align-items: center;
 }
 
 .nav-item {
@@ -39,13 +40,13 @@ a {
 
 .customCTA {
   background-color: #169E00;
-  color: white !important; 
+  color: white !important;
   padding: 10px;
-  border-radius: 14px; 
+  border-radius: 14px;
   cursor: pointer;
 }
 
-.hero-section{
+.hero-section {
   background-color: #169E00;
   display: flex;
   flex-direction: column;
@@ -57,19 +58,19 @@ a {
   font-family: "Montserrat", serif;
 }
 
-.hero-item1{
+.hero-item1 {
   font-weight: 700;
   font-size: 65px;
   line-height: 117px;
 }
 
-.hero-item2{
+.hero-item2 {
   font-weight: 700;
   font-size: 40px;
   line-height: 48.76px;
 }
 
-.hero-item3{
+.hero-item3 {
   font-weight: 700;
   font-size: 24px;
   line-height: 29.26px;
@@ -80,7 +81,7 @@ a {
   background-color: white;
   width: max-content;
   padding: 10px;
-  border-radius: 14px; 
+  border-radius: 14px;
   cursor: pointer;
   font-size: 32px;
   font-weight: 500;
@@ -104,6 +105,7 @@ a {
   line-height: 65px;
   font-family: "Montserrat", serif;
 }
+
 .text2 {
   color: #A3A3A3;
   font-weight: 700;
@@ -116,7 +118,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   font-family: "Montserrat", serif;
 }
 
@@ -126,6 +128,7 @@ a {
   padding-bottom: 15px;
   padding-left: 155px;
   padding-right: 155px;
+  transition: all 0.3s ease-out;
 }
 
 .head-2 {
@@ -134,16 +137,27 @@ a {
   padding-bottom: 15px;
   padding-left: 155px;
   padding-right: 155px;
+  transition: all 0.3s ease-out;
 }
 
-.car-d{
-display: flex;
-justify-content: center;
-gap: 20px;
-padding: 40px;
+.head-1:hover {
+  background-color: #002a96;
+  transform: scale(1.1) translateZ(0);
 }
 
-.card{
+.head-2:hover {
+  background-color: #169E00;
+  transform: scale(1.1) translateZ(0);
+}
+
+.car-d {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px;
+}
+
+.card {
   display: block;
   background-color: white;
   height: 397px;
@@ -154,6 +168,12 @@ padding: 40px;
   align-items: flex-start;
   justify-content: center;
   padding: 10px;
+  transition: all 0.3s ease-out;
+}
+
+.card:hover {
+  background-color: azure;
+  transform: scale(1.1) translateZ(0);
 }
 
 .one {
@@ -163,7 +183,7 @@ padding: 40px;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  width:fit-content;
+  width: fit-content;
   font-weight: 100;
   font-size: 64px;
   padding: 4% 10%;
@@ -178,7 +198,7 @@ padding: 40px;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  width:fit-content;
+  width: fit-content;
   font-weight: 100;
   font-size: 64px;
   padding: 4% 10%;
@@ -193,7 +213,7 @@ padding: 40px;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  width:fit-content;
+  width: fit-content;
   font-weight: 100;
   font-size: 64px;
   padding: 4% 10%;
@@ -262,6 +282,7 @@ padding: 40px;
   border-radius: 20px;
   box-shadow: 5px 5px 20px black;
   font-family: "Montserrat", serif;
+  transition: all 0.3s ease-out;
 }
 
 .content-2 {
@@ -275,7 +296,7 @@ padding: 40px;
   border-radius: 20px;
   box-shadow: 5px 5px 20px black;
   font-family: "Montserrat", serif;
-
+  transition: all 0.3s ease-out;
 }
 
 .content-3 {
@@ -289,10 +310,11 @@ padding: 40px;
   border-radius: 20px;
   box-shadow: 5px 5px 20px black;
   font-family: "Montserrat", serif;
-
+  transition: all 0.3s ease-out;
 }
 
 .content-4 {
+
   flex-wrap: wrap;
   gap: 10px;
   justify-content: space-between;
@@ -302,14 +324,30 @@ padding: 40px;
   border-radius: 20px;
   box-shadow: 5px 5px 20px black;
   font-family: "Montserrat", serif;
+  transition: all 0.3s ease-out;
+}
 
+.content-1:hover {
+  transform: scale(1.1) translateZ(0);
+}
+
+.content-2:hover {
+  transform: scale(1.1) translateZ(0);
+}
+
+.content-3:hover {
+  transform: scale(1.1) translateZ(0);
+}
+
+.content-4:hover {
+  transform: scale(1.1) translateZ(0);
 }
 
 .text-- {
-font-weight: 700;
-font-size: 40px;
-line-height: 48px;
-padding: 20px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  padding: 20px;
 }
 
 .text- {
@@ -336,14 +374,14 @@ padding: 20px;
 
 .icon-1 {
   width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    background: #169E00;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-left: 30px;
+  height: 90px;
+  border-radius: 50%;
+  background: #169E00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 30px;
 }
 
 .container {
@@ -351,15 +389,15 @@ padding: 20px;
 }
 
 .f {
-    display: flex;
-    padding: 20px;
-    width: 100%;
-    height: auto;
-    background: rgba(0, 42, 150, 1);
-    color: #fff;
-    font-family: "Montserrat", serif;
+  display: flex;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+  background: rgba(0, 42, 150, 1);
+  color: #fff;
+  font-family: "Montserrat", serif;
 }
- 
+
 .f-uni {
   padding: 10px;
   width: 25%;
@@ -367,7 +405,7 @@ padding: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+
 }
 
 .f1 {
@@ -430,16 +468,16 @@ footer span {
 }
 
 .hero-section1 {
-    background-color: #169E00;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    height: 69vh;
-    padding: 40px;
-    gap: 20px;
-    font-family: "Montserrat", serif;
+  background-color: #169E00;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  height: 69vh;
+  padding: 40px;
+  gap: 20px;
+  font-family: "Montserrat", serif;
 }
 
 .cardtext-2 {
@@ -447,171 +485,178 @@ footer span {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-}
-.cardtext-2 img{
-width: 100%;
+  transition: all 0.3s ease-out;
 }
 
-.car-d1{
+.cardtext-2:hover{
+  transform: scale(1.1) translateZ(0);
+}
+
+.cardtext-2 img {
+  width: 100%;
+}
+
+.car-d1 {
   display: flex;
   justify-content: center;
   width: 100% !important;
   gap: 20px;
   margin: 0 auto;
-  }
-
-.design-card1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 30px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
-  .design-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-    max-width: 1250px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: #003399;
-    border-radius: 16px;
-    font-family: "Montserrat", serif;
-  }
+.design-card1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.design-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1250px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: #003399;
+  border-radius: 16px;
+  font-family: "Montserrat", serif;
+}
 
 
-  .image-section img {
-    width: 100%;
-    max-width: 400px;
-    object-fit: cover;
-  }
-  
-  .content-section {
-    flex: 1;
-    color: white;
-    padding: 20px;
-  }
-  
-  .content-section h1 {
-    font-size: 36px;
-    margin-bottom: 16px;
-  }
-  
-  .content-section p {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 16px;
-  }
-  
-  .content-section ul {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 20px;
-  }
-  
-  .content-section ul li {
-    margin: 8px 0;
-    font-size: 16px;
-  }
-  
-  button {
-    background-color: #169E00; 
-    border: none;
-    padding: 12px 24px;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: "Montserrat", serif;
-  }
-  
-  button:hover {
-    background-color: #169E00;
-  }
+.image-section img {
+  width: 100%;
+  max-width: 400px;
+  object-fit: cover;
+}
 
-  .section-7 {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 50px;
-    font-family: "Montserrat", serif;
-  }
-    
-  .text3 {
-    color: #169E00;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 65px;
-    font-family: "Montserrat", serif;
-    padding-left: 70px;
-  }
+.content-section {
+  flex: 1;
+  color: white;
+  padding: 20px;
+}
 
-  .text4 {
-    color: #A3A3A3;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 39px;
-    font-family: "Montserrat", serif;
-    padding-left: 70px;
-    padding-top: 10px;
-  }
+.content-section h1 {
+  font-size: 36px;
+  margin-bottom: 16px;
+}
 
-  .formcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Montserrat", serif;
-    padding-bottom: 100px;
-    padding-top: 20px;
-  }
+.content-section p {
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 16px;
+}
 
-  .form-container {
-    background-color: #008000; 
-    padding: 20px;
-    border-radius: 10px; 
-    width: 800px;
-    height: 400px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
-  }
-  
-  
-  form label {
-    display: block;
-    color: white;
-    font-size: 16px;
-    margin-bottom: 8px;
-  }
-  
- 
-  form input {
-    width: 97%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 4px;
-    font-size: 14px;
-  }
-  
-  
-  form button {
-    width: 100%;
-    padding: 12px;
-    background-color: #003399; 
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  form button:hover {
-    background-color: #002080; 
-  }
+.content-section ul {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.content-section ul li {
+  margin: 8px 0;
+  font-size: 16px;
+}
+
+button {
+  background-color: #169E00;
+  border: none;
+  padding: 12px 24px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: "Montserrat", serif;
+}
+
+button:hover {
+  background-color: #169E00;
+}
+
+.section-7 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 50px;
+  font-family: "Montserrat", serif;
+}
+
+.text3 {
+  color: #169E00;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 65px;
+  font-family: "Montserrat", serif;
+  padding-left: 70px;
+}
+
+.text4 {
+  color: #A3A3A3;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 39px;
+  font-family: "Montserrat", serif;
+  padding-left: 70px;
+  padding-top: 10px;
+}
+
+.formcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat", serif;
+  padding-bottom: 100px;
+  padding-top: 20px;
+}
+
+.form-container {
+  background-color: #008000;
+  padding: 20px;
+  border-radius: 10px;
+  width: 800px;
+  height: 400px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+form label {
+  display: block;
+  color: white;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+
+form input {
+  width: 97%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+
+form button {
+  width: 100%;
+  padding: 12px;
+  background-color: #003399;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #002080;
+}
